# twitch-emotes-tracker

./: Cargo.toml  README.md  docker-compose.yaml
postgres/: Dockerfile  README.md  create_emotes_table.sql
scrape-streamers/: Cargo.toml  README.md
scrape-streamers/src/: main.rs
twitch-chat-listener/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
twitch-chat-listener/src/: emotes.txt  main.rs  streamers.txt
twitch-chat-listener/src/db_write/: mod.rs
