[package]
name = "twitch-chat-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
futures = "0.3.25"
multiset = "0.0.5"
tokio = { version = "1.22.0", features = ["rt-multi-thread"]}
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"]}
twitch-irc = "5.0.0"
